Improved dynamicity by making sections dynamic
